added stats handlers
