# docs/swagger.json
@@ -194,6 +194,41 @@
                 }
             }
         },
+        "/stats/assignmentsPerMember": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Stats"
+                ],
+                "summary": "Получить статистику назначений пользователей ревьюверами",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Отступ в статистике",
+                        "name": "offset",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Количество записей в результате",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Статистика по назначениям",
+                        "schema": {
+                            "$ref": "#/definitions/docs.AssignmentsStats"
+                        }
+                    }
+                }
+            }
+        },
         "/team/add": {
             "post": {
                 "consumes": [
@@ -414,6 +449,31 @@
                 },
                 "team_name": {
                     "type": "string"
+                }
+            }
+        },
+        "docs.AssignmentsPerMember": {
+            "type": "object",
+            "properties": {
+                "assigments_count": {
+                    "type": "integer"
+                },
+                "member_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "docs.AssignmentsStats": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "results": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/docs.AssignmentsPerMember"
+                    }
                 }
             }
         },
